objects/geopointe__GP_Demographics__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Border_Opacity__c</fullName>
        <label>Border Opacity</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Fill_Opacity__c</fullName>
        <label>Fill Opacity</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Folder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Geopointe Folder</label>
        <referenceTo>geopointe__GP_Folder__c</referenceTo>
        <relationshipName>Demographics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Granularity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Granularity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Max_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Max Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Metric__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Metric</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Min_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Min Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal</label>
        <type>Checkbox</type>
    </fields>
    <label>Geopointe Demographics</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Demographics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Demographics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>